force-app/main/default/objects/Account_Property_Relationship__c/Account_Property_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account Property Relationship</label>
    <nameField>
        <displayFormat>APR-{0000000}</displayFormat>
        <label>Account-Property Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Property Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>