force-app/main/default/objects/Account_Property_Relationship__c/fields/isPrimaryResidence__c.field-meta.xml
<CustomField>
    <fullName>isPrimaryResidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Residence</label>
    <type>Checkbox</type>
</CustomField>